# OV_python

./: .gitmodules  README.md  index.html  ov.py  pyproject.toml
src/: app.py  model.py
teplates/: index.html
