[tool.poetry]
name = "pythonovmodel"
version = "0.1.0"
description = ""
authors = ["kanade147359 <kanade147359@keio.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
